[project]
name = "labs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
    "typer>=0.20.0",
]

[tool.ruff]
line-length = 79
target-version = 'py312'

[tool.ruff.lint]
fixable = ['ALL']
select = ['E', 'F', 'I', 'B']

[tool.mypy]
python_version = '3.12'
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[tool.coverage.run]
omit = ["src/interface/*"]